--- a/public/css/output.css
+++ b/public/css/output.css
@@ -748,6 +748,10 @@ select {
   grid-row-start: 1;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .m-2 {
   margin: 0.5rem;
 }
@@ -1016,10 +1020,6 @@ select {
   height: 5rem;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
 .max-h-0 {
   max-height: 0px;
 }
@@ -1221,10 +1221,6 @@ select {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1303,10 +1299,6 @@ select {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .gap-x-8 {
@@ -1730,6 +1722,10 @@ select {
 
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-0 {
+  padding: 0px;
 }
 
 .p-8 {
@@ -2980,10 +2976,6 @@ select {
 
   .md\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:grid-rows-1 {
