--- a/public/css/output.css
+++ b/public/css/output.css
@@ -716,6 +716,10 @@ select {
   right: 0px;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -1841,6 +1845,10 @@ select {
 
 .pl-1 {
   padding-left: 0.25rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pl-4 {
